# memos-graph

./: .gitignore  AGENTS.md  ANALYSIS_CHUNK_ID_NONE.md  AUDIT_RESPONSE.md  BACKTEST_REPORT.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_FINAL.md  COMPETITIVE_ANALYSIS_HIGH_STAR.md  COMPETITIVE_ANALYSIS_MEMOS_COMPLETE.md  COMPETITIVE_ANALYSIS_MEMOS_PLUGIN.md  COMPLETE_INTEGRATION_REPORT.md  CONTRACT_TESTS_FIX_REPORT.md  DATABASE_MAINTENANCE_GUIDE.md  DESIGN.md  DESIGN_COMPARISON_REPORT.md  E2E_TEST_REPORT.md  FINAL_COMPLETE_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_DELLM_OPTIMIZATION_PLAN.md  FINAL_PROJECT_SUMMARY.md  FINAL_REALTIME_TEST_REPORT.md  FINAL_VERIFICATION.md  FIX_SUMMARY_CHUNK_ID.md  FUNCTIONAL_INSPIRATIONS.md  GITNEXUS_ANALYSIS_REPORT.md  GITNEXUS_ANALYSIS_v2.md  GITNEXUS_FRESH_ANALYSIS.md  INITIAL_DRAFT.md  KNOWN_ISSUES.md  MOA_VALIDATION_FINAL_REPORT.md  NEO4J_INTEGRATION_REPORT.md  NETWORK_ACCESS_GUIDE.md  OPTIMIZED_RECALL_SCHEME.md  P0_OPTIMIZATION_COMPLETE_REPORT.md  P1_OPTIMIZATION_COMPLETE_REPORT.md  P3_P4_FINAL_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  REALITY_CHECK.md  REALTIME_ARCHITECTURE_TEST_REPORT.md  (+33 more)
alembic/: env.py
alembic/versions/: 0001_initial.py  (+1 more)
docs/: ARCHITECTURE.md  MIGRATION_PLAN.md  PACK_PROTOCOL.md  SPEC.md  TASK_BREAKDOWN.md  TEST_SPEC.md  VIEWER_DESIGN.md
packs/nako/: HEARTBEAT.md  README.md  (+3 more)
scripts/: db-health-check.sh  install.sh  mvp-start.sh  upload-to-github.sh
src/: alembic.ini
systemd/: memos-graph.service
tests/: conftest.py  test_contracts.py  test_heartbeat.py  test_memories.py  test_schema.py
(+78 files in other folders)
