[project]
name = "memos-graph"
version = "0.9.0-beta"
description = "Agent state and long-term memory engine with PostgreSQL + pgvector + knowledge graph (Beta Release)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "gato", email = "gato@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.7",
    "httpx>=0.26.0",
    "jinja2>=3.1.3",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[postgresql]>=3.7.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
embedding = [
    "sentence-transformers>=2.3.0",
]

[project.scripts]
memos-graph = "memos_graph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memos_graph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
